styling and adjusting hmtl

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -53,12 +53,12 @@
 </div>
     <main>
         <section class="hero-section">
-            <span class="welcome-message">
+            <div class="welcome-message">
                 <h2>Welcome, We are Argentina</h2>
-            </span>
-            <span class="join-btn">
+            </div>
+            <div class="join-btn">
                 <h2>Join the Chamber</h2>
-            </span>
+            </div>
             <img src="/wdd230/chamber/images/hero-image.jpg" alt="">
         </section>
         <section>
@@ -121,7 +121,7 @@
         </section>
         <section class="join-us">
             <button class="btn-2">Join Us! </button>
-            <p>Discover how to join the chamber of commerce and how it will benefit your organization!</p>
+            <h5>Discover how to join the chamber of commerce and how it will benefit your organization!</h5>
         </section>
     </main>
     <footer>
