--- a/chamber/index.html
+++ b/chamber/index.html
@@ -10,7 +10,7 @@
         This project is part of an Assignment for the WDD230 Course at BYU Idaho - Online ( for the Web & Computer programming Certificate).
         It contains multiple pages, utilizing HTML, CSS, and Javascript. It's adapted to be responsive and support the most common browsers.">
 
-    <link rel="icon" href="/favicon.ico">
+    <link rel="icon" href="/wdd230/chamber/favicon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="/wdd230/chamber/css/base.css">
     <link rel="stylesheet" href="/wdd230/chamber/css/medium.css">
