--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="/wdd230/lesson3/styles/medium.css">
     <link rel="stylesheet" href="/wdd230/lesson3/styles/large.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-
+    <link rel="icon" href="/wdd230/chamber/favicon.ico">
     <title>Argentine Chamber of Commerce</title>
 </head>
 
