--- a/chamber/index.html
+++ b/chamber/index.html
@@ -6,51 +6,54 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="This is the Chamber of Commerce Website. It's a project assginment for the WDD230 Course at BYU - Idaho. In this project is applied the principle of responsiveness, white spaces, good contrast and consistency in design and layout, always willing to keep improving this website.
-        This project is part of an Assignment for the WDD230 Course at BYU Idaho - Online ( for the Web & Computer programming Certificate).
-        It contains multiple pages, utilizing HTML, CSS, and Javascript. It's adapted to be responsive and support the most common browsers.">
-
+        content="This is the Chamber of Commerce Website. It's a project assignment for the WDD230 Course at BYU - Idaho. In this project is applied the principle of responsiveness, white spaces, good contrast, and consistency in design and layout. It contains multiple pages, utilizing HTML, CSS, and Javascript. ">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto+Mono:wght@300;400&display=swap"
+        rel="stylesheet">
     <link rel="icon" href="/wdd230/chamber/favicon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="/wdd230/chamber/css/base.css">
     <link rel="stylesheet" href="/wdd230/chamber/css/medium.css">
     <link rel="stylesheet" href="/wdd230/chamber/css/large.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
     <title>Argentine Chamber of Commerce</title>
 
 </head>
 
 <body>
-    <div style="position:relative; ">
-          <div id="myDIV">
-            <p>🤝🏼 Come join us for the chamber meet and greet Wednesday at 7:00 p.m.</p>
-            <i onclick="myFunction()">❌</i>
-</div>
-    <header>
-        <div class="name">
-            <img src="/wdd230/lesson3/images/logo.jpg" alt="Chamber logo">
-        </div>
-        <nav>
-            <ul id="primaryNav">
-                  <li class="active"><a href="#">Home</a></li>
-                <li><a href="#">Discover</a></li>
-                <li ><a href="#">Directory</a></li>
-                <li><a href="#">Join</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </nav>
-        <div class="icons">
-           <a href="https://www.facebook.com/" target="_blank"><img src="/wdd230/chamber/images/facebook.png" alt="Facebook icon"></a>
-           <a href="https://www.instagram.com/" target="_blank"> <img src="/wdd230/chamber/images/instagram.png" alt="Instagram icon"></a>
-            <a href="https://www.linkedin.com/in/josuebcenturion/" target="_blank"><img src="/wdd230/chamber/images/linkedin.png" alt="Linkedin icon"></a>
-        </div>
-        <div class="btn"> <button id="hamburgerBtn"><span>&#9776;</span><span>x</span></button></div>
-        <div class="current-date">
-            <p>Monday 22, November 2022</p>
-        </div>
-    </header>
-</div>
+    
+        <header>
+            
+            <div class="name">
+                <img src="/wdd230/lesson3/images/logo.jpg" alt="Chamber logo">
+            </div>
+            <nav>
+                <ul id="primaryNav">
+                    <li class="active"><a href="#">Home</a></li>
+                    <li><a href="#">Discover</a></li>
+                    <li><a href="#">Directory</a></li>
+                    <li><a href="#">Join</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </nav>
+            <div class="icons">
+                <a href="https://www.facebook.com/" target="_blank"><img src="/wdd230/chamber/images/facebook.png"
+                        alt="Facebook icon"></a>
+                <a href="https://www.instagram.com/" target="_blank"> <img src="/wdd230/chamber/images/instagram.png"
+                        alt="Instagram icon"></a>
+                <a href="https://www.linkedin.com/in/josuebcenturion/" target="_blank"><img
+                        src="/wdd230/chamber/images/linkedin.png" alt="Linkedin icon"></a>
+            </div>
+            <div class="btn"> <button id="hamburgerBtn"><span>&#9776;</span><span>x</span></button></div>
+            <div class="current-date">
+                <p>Monday 22, November 2022</p>
+            </div>
+                <div id="myDIV">
+                    <p>🤝🏼 Come join us for the chamber meet and greet Wednesday at 7:00 p.m.</p>
+                    <i onclick="myFunction()">❌</i>
+            </div>
+        </header>
+    </div>
     <main>
         <section class="hero-section">
             <div class="welcome-message">
