working with files quality and sizes

--- a/lesson3/color-shceme.html
+++ b/lesson3/color-shceme.html
@@ -16,7 +16,7 @@
 
 <body>
     <header>
-        <img src="/wdd230/lesson3/images/logo.jpg" alt="Chamber logo">
+        <img src="/wdd230/lesson3/images/logo.webp" alt="Chamber logo">
         <div class="name">
             <h1>Argentine Chamber of Commerce</h1>
         </div>
