--- a/chamber/index.html
+++ b/chamber/index.html
@@ -21,38 +21,38 @@
 </head>
 
 <body>
-    
-        <header>
-            
-            <div class="name">
-                <img src="/wdd230/lesson3/images/logo.jpg" alt="Chamber logo">
-            </div>
-            <nav>
-                <ul id="primaryNav">
-                    <li class="active"><a href="#">Home</a></li>
-                    <li><a href="#">Discover</a></li>
-                    <li><a href="#">Directory</a></li>
-                    <li><a href="#">Join</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
-            </nav>
-            <div class="icons">
-                <a href="https://www.facebook.com/" target="_blank"><img src="/wdd230/chamber/images/facebook.png"
-                        alt="Facebook icon"></a>
-                <a href="https://www.instagram.com/" target="_blank"> <img src="/wdd230/chamber/images/instagram.png"
-                        alt="Instagram icon"></a>
-                <a href="https://www.linkedin.com/in/josuebcenturion/" target="_blank"><img
-                        src="/wdd230/chamber/images/linkedin.png" alt="Linkedin icon"></a>
-            </div>
-            <div class="btn"> <button id="hamburgerBtn"><span>&#9776;</span><span>x</span></button></div>
-            <div class="current-date">
-                <p>Monday 22, November 2022</p>
-            </div>
-                <div id="myDIV">
-                    <p>🤝🏼 Come join us for the chamber meet and greet Wednesday at 7:00 p.m.</p>
-                    <i onclick="myFunction()">❌</i>
-            </div>
-        </header>
+
+    <header>
+
+        <div class="name">
+            <img src="/wdd230/lesson3/images/logo.webp" alt="Chamber logo">
+        </div>
+        <nav>
+            <ul id="primaryNav">
+                <li class="active"><a href="#">Home</a></li>
+                <li><a href="#">Discover</a></li>
+                <li><a href="#">Directory</a></li>
+                <li><a href="#">Join</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+        <div class="icons">
+            <a href="https://www.facebook.com/" target="_blank"><img src="/wdd230/chamber/images/facebook.png"
+                    alt="Facebook icon"></a>
+            <a href="https://www.instagram.com/" target="_blank"> <img src="/wdd230/chamber/images/instagram.png"
+                    alt="Instagram icon"></a>
+            <a href="https://www.linkedin.com/in/josuebcenturion/" target="_blank"><img
+                    src="/wdd230/chamber/images/linkedin.png" alt="Linkedin icon"></a>
+        </div>
+        <div class="btn"> <button id="hamburgerBtn"><span>&#9776;</span><span>x</span></button></div>
+        <div class="current-date">
+            <p>Monday 22, November 2022</p>
+        </div>
+        <div id="myDIV">
+            <p>🤝🏼 Come join us for the chamber meet and greet Wednesday at 7:00 p.m.</p>
+            <i onclick="myFunction()">❌</i>
+        </div>
+    </header>
     </div>
     <main>
         <section class="hero-section">
@@ -62,7 +62,12 @@
             <div class="join-btn">
                 <h2>Join the Chamber</h2>
             </div>
-            <img src="/wdd230/chamber/images/hero-image.jpg" alt="">
+            <picture>
+
+                <source media="(min-width: 64em)" srcset="/wdd230/chamber/images/large.jpg">
+                <source media="(min-width: 32em)" srcset="/wdd230/chamber/images/medium.jpg">
+                <img src="/wdd230/chamber/images/small.jpg" alt="Hero Image">
+            </picture>
         </section>
         <section>
             <h2>Ribbon Cutting</h2>
@@ -131,7 +136,7 @@
         <div class="footer-main">
             <div class="footer-left">
                 <div class="footer-image">
-                    <img src="/wdd230/lesson3/images/logo-red.jpg" alt="Chamber logo">
+                    <img src="/wdd230/lesson3/images/logo-red.webp" alt="Chamber logo">
                 </div>
                 <div class="footer-info">
                     <p><strong> Argentine Chamber of Commerce </strong></p>
