--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <header>
-        <img src="/wdd230/lesson3/images/logo.jpg" href="index.html" alt="Chamber logo">
+        <img src="/wdd230/lesson3/images/logo.webp" href="index.html" alt="Chamber logo">
         <div class="name">
             <h1>Argentine Chamber of Commerce</h1>
         </div>
