--- a/chamber/index.html
+++ b/chamber/index.html
@@ -79,12 +79,15 @@
             <h2>Weather</h2>
             <div class="weather">
                 <img src="/wdd230/chamber/images/weather_icon.png" alt="">
-                <h3>62.51°F</h3>
+                <h4>Temperature in °F:<input type="text" id="myTemp"  placeholder="Type the Temperature"></h3>
+                <p id="windSpeed">Wind Speed in mph:<input type="text" id="myWind" placeholder="Type the Wind Speed"></p>
+            <button type="button" id="windChillBtn">Get Wind Chill</button>
             </div>
-            <h4>CLEAR SKY</h4>
+            
             <hr>
-            <p>Wind Speed: 2.3mph </p>
-            <p>Wind Chill: N/A</p>
+            <h5>CLEAR SKY</h4>
+           
+            <span> Wind Chill:<p id="output"></p></span>
         </section>
         <section>
             <h2>New Release</h2>
@@ -159,6 +162,7 @@
         </div>
     </footer>
     <script src="/wdd230/chamber/js/scripts.js"></script>
+    <script src="/wdd230/chamber/js/windchill.js"></script>
 </body>
 
 </html>
