--- a/chamber/index.html
+++ b/chamber/index.html
@@ -64,9 +64,9 @@
             </div>
             <picture>
 
-                <source media="(min-width: 64em)" srcset="/wdd230/chamber/images/large.jpg">
-                <source media="(min-width: 32em)" srcset="/wdd230/chamber/images/medium.jpg">
-                <img src="/wdd230/chamber/images/small.jpg" alt="Hero Image">
+                <source media="(min-width: 64em)" srcset="/wdd230/chamber/images/large.webp">
+                <source media="(min-width: 32em)" srcset="/wdd230/chamber/images/medium.webp">
+                <img src="/wdd230/chamber/images/small.webp" alt="Hero Image">
             </picture>
         </section>
         <section>
