adjusting page to standards

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -77,7 +77,7 @@
         <section>
             <h2>Weather</h2>
             <div class="weather">
-                <img src="/wdd230/chamber/images/weather_icon.png" alt="">
+                <img src="/wdd230/chamber/images/weather_icon.png" alt="Weather Icon Image">
                 <h3>Temperature in °F:
                     <input type="text" id="myTemp"  placeholder="Type the Temperature"></h3>
                 <p id="windSpeed">Wind Speed in mph:<input type="text" id="myWind" placeholder="Type the Wind Speed"></p>
@@ -100,7 +100,7 @@
             <div class="spotlight">
                 <h2>Globant</h2>
                 <div class="images">
-                    <img src="/wdd230/chamber/images/globant.png" alt="">
+                    <img src="/wdd230/chamber/images/globant.png" alt="Globant Company">
                 </div>
                 <h4>Have Fun</h4>
                 <hr>
@@ -110,18 +110,18 @@
             <div class="spotlight">
                 <h2>Mercado Libre</h2>
                 <div class="images">
-                    <img src="/wdd230/chamber/images/mercado_libre.png" alt="">
+                    <img src="/wdd230/chamber/images/mercado_libre.png" alt="Mercado Libre Company">
                 </div>
 
                 <h4>codo a codo, hasta que llegue lo mejor</h4>
                 <hr>
                 <p> https://mercadolibre.com/ </p>
-                <p><a href="https://investor.mercadolibre.com/contact-us">mercadolibre.com/contact-us</a></p>
+                <p><a href="https://investor.mercadolibre.com/contact-us">mercadolibre/contact-us</a></p>
             </div>
             <div class="spotlight">
                 <h2>Le Utthe</h2>
                 <div class="images">
-                    <img src="/wdd230/chamber/images/le_utthe.png" alt="">
+                    <img src="/wdd230/chamber/images/le_utthe.png" alt="Le Utthe Company">
                 </div>
                 <h4>codo a codo, hasta que llegue lo mejor</h4>
                 <hr>
