--- a/index.html
+++ b/index.html
@@ -42,6 +42,20 @@
 
         <hr>
 
+        <!-- <section>
+            <h2>Weather</h2>
+            <div class="weather">
+                <img src="/wdd230/chamber/images/weather_icon.png" alt="">
+                <h3>62.51°F</h3>
+            </div>
+            <h4>CLEAR SKY</h4>
+            <hr>
+            <p>Wind Speed: 2.3mph </p>
+            <p>Wind Chill -->
+                                    <!-- <input type="text" id="myTemp"  placeholder="Type the Temperature"> -->
+            <!-- <button type="button" id="windChillBtn">Get Wind Chill</button> -->
+<!-- <input type="text" id="myWind" placeholder="Type the Wind Speed"> -->
+
     </main>
     <footer>
         <p id="year"></p>
