updating chamber and improving performance

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -25,8 +25,8 @@
         </div>
         <nav>
             <ul id="primaryNav">
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="#">Discover</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li class="active"><a href="#">Discover</a></li>
                 <li><a href="#">Directory</a></li>
                 <li><a href="#">Join</a></li>
                 <li><a href="#">Contact</a></li>
@@ -42,64 +42,89 @@
         </div>
         <div class="btn"> <button id="hamburgerBtn"><span>&#9776;</span><span>x</span></button></div>
         <div class="current-date">
-            <p id="today-date">Monday 22, November 2022</p>
+            <p><span id="banner">Welcome, Thank you for visiting Us! </span><span class="visits"></span></p>
         </div>
         <div id="myDIV">
             <p>🤝🏼 Come join us for the chamber meet and greet Wednesday at 7:00 p.m.</p>
             <i onclick="myFunction()">❌</i>
         </div>
     </header>
+    <div class="heading-discover">
+        <h1>Discover Who We Are </h1>
+    </div>
     <main class="main-discover">
         <div class="building">
             <picture> <img class="discover-img" src="./images/placeholder.webp" data-src="./images/building_1.webp"
-                    alt="Bolsa de comercio de Rosario "></picture>
-            <p>The Rosario Chamber of Commerce is one of the most recognized assocations in this field in Argentina. His mission is to:
-              <ul>
-                <li>Generate, promote and support strategic projects that contribute to the economic development of their region of belonging.</li>
+                    alt="Rosario Chamber of Commerce "></picture>
+            <p>The Rosario Chamber of Commerce is one of the most recognized assocations in this field in Argentina. His
+                mission is to:</p>
+            <ul>
+                <li>Generate, promote and support strategic projects that contribute to the economic development of
+                    their region of belonging.</li>
                 <li>Provide Quality Analysis and Certification services on basic products, derivatives and inputs.</li>
-                <li>Promote and offer the business community an efficient arbitration regime as a means of dispute resolution.</li>
-<!--                 <li>Manage and develop fluid institutional relationships with referents from the public and private sectors.</li>
- -->              </ul>
-            </p>
+                <li>Promote and offer the business community an efficient arbitration regime as a means of dispute
+                    resolution.</li>
+            </ul>
+
         </div>
         <div class="building">
             <picture> <img class="discover-img" src="./images/placeholder.webp" data-src="./images/building_2.webp"
-                    alt="Legislatura de Cordoba"></picture>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam gravida velit nunc, ut lobortis felis
-                bibendum blandit. Nullam non erat non nulla finibus pretium. In at egestas ex. In placerat dictum diam,
-                quis venenatis quam finibus vitae. Suspendisse finibus arcu condimentum est porta placerat. Etiam nec
-                diam eu est porta porta vitae non diam. Sed mattis facilisis luctus. Cras pretium turpis ut massa
-                imperdiet fringilla in nec quam. Quisque rutrum leo augue, a elementum mauris scelerisque non.</p>
+                    alt="Salta Chamber of Commerce"></picture>
+            <p>​The Chamber of Commerce and Industry of the Province of Salta is a second-tier non-profit business
+                association that works to defend the interests of the represented sectors. His purpose is to:
+            <ul>
+                <li>Meet objectives of common good linked to the economic, social, educational and cultural development
+                    of society and promote social assistance works.</li>
+                <li>Generate the necessary own resources to develop the programmed activities and achieve economic
+                    solidity.</li>
+            </ul>
         </div>
         <div class="building">
             <picture> <img class="discover-img" src="./images/placeholder.webp" data-src="./images/building_3.jpg"
-                    alt="Bolsa de Comercio del Chaco"></picture>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam gravida velit nunc, ut lobortis felis
-                bibendum blandit. Nullam non erat non nulla finibus pretium. In at egestas ex. In placerat dictum diam,
-                quis venenatis quam finibus vitae. Suspendisse finibus arcu condimentum est porta placerat. Etiam nec
-                diam eu est porta porta vitae non diam. Sed mattis facilisis luctus. Cras pretium turpis ut massa
-                imperdiet fringilla in nec quam. Quisque rutrum leo augue, a elementum mauris scelerisque non.</p>
+                    alt="Chaco Chamber of Commerce"></picture>
+            <p>
+                The Chamber of Commerce of the Chaco is the most important in all of Northeast Argentina. His mission is
+                to:</p>
+            <ul>
+                <li>
+                    Represent, defend and promote the rights and interests of those represented in terms of an
+                    egalitarian participatory democracy.</li>
+                <li>Act as a consultation and collaboration institution for the diagnosis, preparation and evaluation of
+                    public policies applied to our sector.</li>
+                <li>Promote and defend local economic and social development, through solidarity, professionalization
+                    and the preparation of legislative projects.</li>
+            </ul>
         </div>
         <div class="building">
             <picture> <img class="discover-img" src="./images/placeholder.webp" data-src="./images/building_4.webp"
-                    alt="bolsa de comercio de buenos aires"></picture>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam gravida velit nunc, ut lobortis felis
-                bibendum blandit. Nullam non erat non nulla finibus pretium. In at egestas ex. In placerat dictum diam,
-                quis venenatis quam finibus vitae. Suspendisse finibus arcu condimentum est porta placerat. Etiam nec
-                diam eu est porta porta vitae non diam. Sed mattis facilisis luctus. Cras pretium turpis ut massa
-                imperdiet fringilla in nec quam. Quisque rutrum leo augue, a elementum mauris scelerisque non.</p>
+                    alt="Buenos Aires Stock Exchange"></picture>
+            <p>The Buenos Aires Stock Exchange is the organization responsible for the operation of Argentina's primary
+                stock exchange located at Buenos Aires CBD. It's affiliated to the Chambers' of commerce assocation</p>
+            <ul>
+                <li>It remains at the forefront of regulatory updating, promoting transparency and protection of the
+                    investing public, thus managing to compete efficiently with the Stock Exchanges of the region and
+                    the rest of the world.</li>
+                <li>
+                    The multiple cooperation agreements entered into over the years with foreign exchanges imply
+                    recognition by international markets of the constant work in the task of dissemination, training and
+                    education in capital markets.</li>
+            </ul>
         </div>
         <div class="building">
 
             <picture> <img class="discover-img" src="./images/placeholder.webp" data-src="./images/building_5.jpg"
                     alt="Camara de comercio de Buenos Aires"></picture>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam gravida velit nunc, ut lobortis felis
-                bibendum blandit. Nullam non erat non nulla finibus pretium. In at egestas ex. In placerat dictum diam,
-                quis venenatis quam finibus vitae. Suspendisse finibus arcu condimentum est porta placerat. Etiam nec
-                diam eu est porta porta vitae non diam. Sed mattis facilisis luctus. Cras pretium turpis ut massa
-                imperdiet fringilla in nec quam. Quisque rutrum leo augue, a elementum mauris scelerisque non.</p>
+            <p>The Argentine Chamber of Commerce is the main one in the sector. It has also been a pioneer in
+                implementing conciliation and arbitration
+                services, promoting collaboration between small and medium-sized companies. His vision is to:</p>
+            <ul>
+                <li>To be leaders in the markets for grains, livestock products and by-products in which we operate, and
+                    national and international benchmarks for Argentine derivatives.</li>
+                <li>
+                    To be a capital market that facilitates the financing of companies in the region and that channels
+                    local and other investments.</li>
+            </ul>
         </div>
-
     </main>
     <footer>
         <div class="footer-main">
