--- a/chamber/index.html
+++ b/chamber/index.html
@@ -30,7 +30,7 @@
         <nav>
             <ul id="primaryNav">
                 <li class="active"><a href="#">Home</a></li>
-                <li><a href="#">Discover</a></li>
+                <li><a href="discover.html">Discover</a></li>
                 <li><a href="#">Directory</a></li>
                 <li><a href="#">Join</a></li>
                 <li><a href="#">Contact</a></li>
@@ -46,7 +46,7 @@
         </div>
         <div class="btn"> <button id="hamburgerBtn"><span>&#9776;</span><span>x</span></button></div>
         <div class="current-date">
-            <p id="today-date">Monday 22, November 2022</p>
+            <p><span id="banner">Welcome, Thank you for visiting Us! </span><span class="visits"></span></p>
         </div>
         <div id="myDIV">
             <p>🤝🏼 Come join us for the chamber meet and greet Wednesday at 7:00 p.m.</p>
@@ -152,7 +152,7 @@
         <div class="footer-sub">
             <p>&copy;<span id="year"></span> Argentine Chamber |<strong> Josue Benjamin Centurion | </strong> WDD230
                 Project |
-                <p id="updated"></p>
+            <p id="updated"></p>
 
 
         </div>
