description and hover effects

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-    content="This is the Chamber of Commerce Website. It's a project assignment for the WDD230 Course at BYU - Idaho.  ">
+    content = "This is the Chamber of Commerce Website. It's a project assignment for the WDD230 Course at BYU - Idaho. This is the second web page. On this page has been applied the principle of Lazy-loading, hover: effects, responsiveness, and data management with localStorage keys and values.  ">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto+Mono:wght@300;400&display=swap"
