--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
         <ul class="list">
             <li>Lesson 02: <a href="https://josuebce.github.io/wdd230/lesson2/design-principles.html"> Design Principles </a></li>
             <li>Lesson 03: <a href="https://josuebce.github.io/wdd230/lesson3/index.html">Site - Plan </a></li>
-            <li>Lesson 04: <a href=""> Title </a></li>
-            <li>Lesson 05: <a href=""> Title </a></li>
-            <li>Lesson 06: <a href=""> Title </a></li>
-            <li>Lesson 07: <a href=""> Title </a></li>
+            <li>Lesson 04: <a href="https://josuebce.github.io/wdd230/lesson2/design-principles.html"> Design Principles </a></li>
+            <li>Lesson 05: <a href="https://josuebce.github.io/wdd230/lesson3/index.html"> Site Plan </a></li>
+            <li>Lesson 06: <a href="https://josuebce.github.io/wdd230/lesson3/color-shceme.html"> Site Plan: Part 2 </a></li>
+            <li>Lesson 07: <a href="https://josuebce.github.io/wdd230/chamber/discover.html"> Discover Page (Chamber of Commerce) </a></li>
             <li>Lesson 08: <a href=""> Title </a></li>
             <li>Lesson 09: <a href=""> Title </a></li>
             <li>Lesson 10: <a href=""> Title </a></li>
