--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -115,7 +115,7 @@
         <div class="building">
 
             <picture> <img class="discover-img" src="./images/placeholder.webp" data-src="./images/building_5.jpg"
-                    alt="Camara de comercio de Buenos Aires"></picture>
+                    alt="Buenos Aires Chamber of Commerce"></picture>
             <p>The Argentine Chamber of Commerce is the main one in the sector. It has also been a pioneer in
                 implementing conciliation and arbitration
                 services, promoting collaboration between small and medium-sized companies. His vision is to:</p>
