adjsuting images and text

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -56,7 +56,7 @@
     </div>
     <main class="main-discover">
         <div class="building">
-            <picture> <img class="discover-img" src="./images/placeholder.webp" data-src="./images/building_1.webp"
+            <picture> <img class="discover-img" src="./images/placeholder.webp" data-src="./images/building-1.webp"
                     alt="Rosario Chamber of Commerce "></picture>
             <p>The Rosario Chamber of Commerce is one of the most recognized assocations in this field in Argentina. His
                 mission is to:</p>
@@ -70,7 +70,7 @@
 
         </div>
         <div class="building">
-            <picture> <img class="discover-img" src="./images/placeholder.webp" data-src="./images/building_2.webp"
+            <picture> <img class="discover-img" src="./images/placeholder.webp" data-src="./images/building-2.webp"
                     alt="Salta Chamber of Commerce"></picture>
             <p>​The Chamber of Commerce and Industry of the Province of Salta is a second-tier non-profit business
                 association that works to defend the interests of the represented sectors. His purpose is to:
@@ -82,7 +82,7 @@
             </ul>
         </div>
         <div class="building">
-            <picture> <img class="discover-img" src="./images/placeholder.webp" data-src="./images/building_3.jpg"
+            <picture> <img class="discover-img" src="./images/placeholder.webp" data-src="./images/building-3.jpg"
                     alt="Chaco Chamber of Commerce"></picture>
             <p>
                 The Chamber of Commerce of the Chaco is the most important in all of Northeast Argentina. His mission is
@@ -98,7 +98,7 @@
             </ul>
         </div>
         <div class="building">
-            <picture> <img class="discover-img" src="./images/placeholder.webp" data-src="./images/building_4.webp"
+            <picture> <img class="discover-img" src="./images/placeholder.webp" data-src="./images/building-4.webp"
                     alt="Buenos Aires Stock Exchange"></picture>
             <p>The Buenos Aires Stock Exchange is the organization responsible for the operation of Argentina's primary
                 stock exchange located at Buenos Aires CBD. It's affiliated to the Chambers' of commerce assocation</p>
@@ -114,7 +114,7 @@
         </div>
         <div class="building">
 
-            <picture> <img class="discover-img" src="./images/placeholder.webp" data-src="./images/building_5.jpg"
+            <picture> <img class="discover-img" src="./images/placeholder.webp" data-src="./images/building-5.jpg"
                     alt="Buenos Aires Chamber of Commerce"></picture>
             <p>The Argentine Chamber of Commerce is the main one in the sector. It has also been a pioneer in
                 implementing conciliation and arbitration
