--- a/chamber/index.html
+++ b/chamber/index.html
@@ -77,7 +77,7 @@
         <section>
             <h2>Weather</h2>
             <div class="weather">
-                <img src="/wdd230/chamber/images/weather_icon.png" alt="Weather Icon Image">
+                <img src="/wdd230/chamber/images/weather-icon.webp" alt="Weather Icon Image">
                 <div class="temp"><span id="myTemp">40</span>ºF</div>
             </div>
             <h4>CLEAR SKY</h4>
@@ -107,7 +107,7 @@
             <div class="spotlight">
                 <h2>Mercado Libre</h2>
                 <div class="images">
-                    <img src="/wdd230/chamber/images/mercado_libre.png" alt="Mercado Libre Company">
+                    <img src="/wdd230/chamber/images/mercado-libre.png" alt="Mercado Libre Company">
                 </div>
 
                 <h4>codo a codo, hasta que llegue lo mejor</h4>
@@ -118,7 +118,7 @@
             <div class="spotlight">
                 <h2>Le Utthe</h2>
                 <div class="images">
-                    <img src="/wdd230/chamber/images/le_utthe.png" alt="Le Utthe Company">
+                    <img src="/wdd230/chamber/images/le-utthe.png" alt="Le Utthe Company">
                 </div>
                 <h4>codo a codo, hasta que llegue lo mejor</h4>
                 <hr>
