improving website, adding form excercise

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -25,7 +25,8 @@
     <header>
 
         <div class="name">
-            <img src="/wdd230/lesson3/images/logo.webp" alt="Chamber logo">
+            <img src="/wdd230/lesson3/images/logo.png" alt="Chamber logo">
+            <h1>Argentine Chamber of Commerce</h1>
         </div>
         <nav>
             <ul id="primaryNav">
@@ -135,7 +136,7 @@
         <div class="footer-main">
             <div class="footer-left">
                 <div class="footer-image">
-                    <img src="/wdd230/lesson3/images/logo-red.webp" alt="Chamber logo">
+                    <img src="/wdd230/lesson3/images/logo-red.png" alt="Chamber logo">
                 </div>
                 <div class="footer-info">
                     <p><strong> Argentine Chamber of Commerce </strong></p>
