header and footer

--- a/lesson-8/tablebuild.html
+++ b/lesson-8/tablebuild.html
@@ -10,6 +10,9 @@
 </head>
 
 <body>
+    <header>
+    <h1>HTML TABLES EXAMPLE </h1>
+</header>
     <table>
         <tbody>
             <tr>
@@ -41,6 +44,12 @@
             </tr>
         </tbody>
     </table>
+    <h2>Table 1: Wasatch Sales</h2>
+    <footer>
+        <p id="year"></p>
+        <p id="updated"></p>
+    </footer>
+    <script src="/wdd230/scripts/main.js"></script>
 </body>
 
 </html>
