--- a/chamber/join.html
+++ b/chamber/join.html
@@ -28,7 +28,7 @@
         </div>
         <nav>
             <ul id="primaryNav">
-                <li ><a href="index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="discover.html">Discover</a></li>
                 <li><a href="#">Directory</a></li>
                 <li class="active"><a href="#">Join</a></li>
@@ -57,38 +57,39 @@
             <h2>Membership Application</h2>
         </div>
         <div class="form-join">
-        <form method="get" action="thanks.html">
-            <fieldset>
-                <legend>Applicant Information</legend>
-                <label class="top">First Name*<input type="text" name="fname" required></label>
-                <label class="top">Last Name*<input type="text" name="lname" required></label>
-                <label class="top">Phone*<input type="tel" name="phone"></label>
-                <label class="top">Email*<input type="email" name="email" required
-                        placeholder="someone@email.com"></label>
-                <label class="top"> Business Name/Title<input type="text" name="businessname" required></label>
-                <label class="top"> Business Position<input type="text" name="businessposition"  pattern="[A-Za-z- ]{6,}"></label>
+            <form method="get" action="thanks.html">
+                <fieldset>
+                    <label class="top">First Name*<input autofocus type="text" name="fname" required></label>
+                    <label class="top">Last Name*<input type="text" name="lname" required></label>
+                    <label class="top">Phone*<input type="tel" name="phone"></label>
+                    <label class="top">Email*<input type="email" name="email" required
+                            placeholder="someone@email.com"></label>
+                    <label class="top"> Business Name/Title<input type="text" name="businessname" required></label>
+                    <label class="top"> Business Position<input type="text" name="businessposition"
+                            pattern="[A-Za-z- ]{6,}"></label>
 
-            </fieldset>
-            <fieldset>
-                <legend>Funding</legend>
-                <label class="top"> Membership Level
-                    <select name="subject">
-                        <option value="">Please Select 🔽🡇</option>
-                        <option value="software"><p> 1. NP Membership is for non <br> 
-                            profit organizations and there is no fee. </p>
-                        </option>
-                        <option value="creative">2. Bronze Membership.</option>
-                        <option value="info">3. Silver Membership</option>
-                        <option value="data">4. Gold Membership</option>
-                    </select>
-                </label>
-                <label> <textarea name="businessDescription" rows="4" cols="50">
+                </fieldset>
+                <fieldset>
+
+                    <label class="top"> Membership Level
+                        <select name="subject">
+                            <option value="">Please Select </option>
+                            <option value="software">
+                                <p> 1. NP Membership is for non <br>
+                                    profit organizations and there is no fee. </p>
+                            </option>
+                            <option value="creative">2. Bronze Membership.</option>
+                            <option value="info">3. Silver Membership</option>
+                            <option value="data">4. Gold Membership</option>
+                        </select>
+                    </label>
+                    <label> Describe your Business <textarea name="businessDescription" rows="4" cols="50">
                 </textarea></label>
-                <input type="hidden" name="date" id="date">
-            </fieldset>
-            <label><input type="submit" name="submitBtn" value="Send my Application" class="submitBtn"></label>
-        </form>
-    </div>
+                    <input type="hidden" name="date" id="date">
+                </fieldset>
+                <label><input type="submit" name="submitBtn" value="Send my Application" class="submitBtn"></label>
+            </form>
+        </div>
     </main>
 
     <footer>
