--- a/chamber/thanks.html
+++ b/chamber/thanks.html
@@ -58,11 +58,13 @@
         </div>
     </header>
     <main class="main-thanks">
+        
         <div class="thanks-div">
-        <h1>Course Proposal Application</h1>
-        <p>Thanks for applying to create a course for our online library. We will get back to you within a week with a
-            response.</p>
-        </div>
+        <legend>Application Successfully Submitted</legend>           
+        <h1>Thanks for Applying</h1>
+        <p>We will let you know our decision. We <strong> highly appreciate your interest</strong>  </p>
+        <button class="submitBtn" > <a href="index.html"> Go back Home </a> </button>    
+    </div>
     </main>
 
     <footer>
