--- a/chamber/join.html
+++ b/chamber/join.html
@@ -75,8 +75,8 @@
                         <select name="subject">
                             <option value="">Please Select </option>
                             <option value="software">
-                                <p> 1. NP Membership is for non <br>
-                                    profit organizations and there is no fee. </p>
+                                1. NP Membership is for non 
+                                    profit organizations and there is no fee. 
                             </option>
                             <option value="creative">2. Bronze Membership.</option>
                             <option value="info">3. Silver Membership</option>
