--- a/chamber/thanks.html
+++ b/chamber/thanks.html
@@ -60,10 +60,10 @@
     <main class="main-thanks">
         
         <div class="thanks-div">
-        <legend>Application Successfully Submitted</legend>           
+        <p>Application Successfully Submitted</p>           
         <h1>Thanks for Applying</h1>
         <p>We will let you know our decision. We <strong> highly appreciate your interest</strong>  </p>
-        <button class="submitBtn" > <a href="index.html"> Go back Home </a> </button>    
+      <button class="submitBtn"  onclick="window.location.href='https://josuebce.github.io/wdd230/chamber/index.html';" > Go back Home </button> 
     </div>
     </main>
 
