--- a/chamber/join.html
+++ b/chamber/join.html
@@ -4,7 +4,12 @@
 <head>
     <meta charset="utf-8">
     <meta name="description" content="Fill Me In">
-    <meta name="author" content="John Doe">
+    <meta name="author" content="Josue Centurion">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto+Mono:wght@300;400&display=swap"
+        rel="stylesheet">
+    <link rel="icon" href="/wdd230/chamber/favicon.ico">
 
     <!-- This start file was build by Paul Cheney  -->
     <title>Join</title>
