--- a/chamber/join.html
+++ b/chamber/join.html
@@ -68,7 +68,7 @@
                     <label class="top">Last Name*<input type="text" name="lname" required></label>
                     <label class="top">Phone*<input type="tel" name="phone"></label>
                     <label class="top">Email*<input type="email" name="email" required
-                            placeholder="someone@email.com"></label>
+                            placeholder="mypersonal@email.com"></label>
                     <label class="top"> Business Name/Title<input type="text" name="businessname" required></label>
                     <label class="top"> Business Position<input type="text" name="businessposition"
                             pattern="[A-Za-z- ]{6,}"></label>
@@ -77,7 +77,7 @@
                 <fieldset>
 
                     <label class="top"> Membership Level
-                        <select name="subject">
+                        <select name="subject" required>
                             <option value="">Please Select </option>
                             <option value="software">
                                 1. NP Membership is for non 
