--- a/chamber/thanks.html
+++ b/chamber/thanks.html
@@ -12,7 +12,7 @@
     <link rel="icon" href="/wdd230/chamber/favicon.ico">
 
     <!-- This start file was build by Paul Cheney  -->
-    <title>HTML5 Start Site by Paul Cheney</title>
+    <title>Thank You </title>
 
     <!-- TELLS PHONES NOT TO LIE ABOUT THEIR WIDTH & stops the font from enlarging when a phone is turned sideways-->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
