--- a/chamber/thanks.html
+++ b/chamber/thanks.html
@@ -5,16 +5,15 @@
     <meta charset="utf-8">
     <meta name="description" content="Fill Me In">
     <meta name="author" content="Josue Centurion">
+    <meta name="description" content="This is the Thanks page of the project chamber of commerce for the course WDD230 (BYU - Idaho). This pafe is the thank message after submitting the form">
       <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto+Mono:wght@300;400&display=swap"
         rel="stylesheet">
     <link rel="icon" href="/wdd230/chamber/favicon.ico">
 
-    <!-- This start file was build by Paul Cheney  -->
     <title>Thank You </title>
 
-    <!-- TELLS PHONES NOT TO LIE ABOUT THEIR WIDTH & stops the font from enlarging when a phone is turned sideways-->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
 
@@ -29,7 +28,6 @@
 
 </head>
 <body>
-    <!-- HEADER HERE -->
     <header>
 
         <div class="name">
